Upgrade Scala, JMockit version (#4376)
* Upgrade Scale, JMockit version

* Fix for review comment