@@ -185,11 +185,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
+                <version>${surefire.version}</version>
                 <!-- Note config is repeated in scalatest config -->
                 <configuration>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                    <argLine>-Xmx3g -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
+                    <argLine>-Xmx3g -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
                     <systemProperties>
                         <java.awt.headless>true</java.awt.headless>
                     </systemProperties>
