@@ -410,7 +410,7 @@
                 <artifactItem>
                   <groupId>org.jacoco</groupId>
                   <artifactId>org.jacoco.ant</artifactId>
-                  <version>0.7.9</version>
+                  <version>0.8.12</version>
                 </artifactItem>
               </artifactItems>
               <stripVersion>true</stripVersion>
@@ -422,11 +422,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18</version>
+        <version>${surefire.version}</version>
         <!-- Note config is repeated in scalatest config -->
         <configuration>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-          <argLine>-Xmx3g -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
+          <argLine>-Xmx3g -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
           <systemProperties>
             <java.awt.headless>true</java.awt.headless>
             <spark.carbon.hive.schema.store>${carbon.hive.based.metastore}</spark.carbon.hive.schema.store>
@@ -443,7 +443,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>CarbonTestSuite.txt</filereports>
-          <argLine> ${argLine} -ea -Xmx3g -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m
+          <argLine> ${argLine} -ea -Xmx3g -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=512m
           </argLine>
           <stderr />
           <environmentVariables>
@@ -564,7 +564,7 @@
           <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.ant</artifactId>
-            <version>0.7.9</version>
+            <version>0.8.12</version>
           </dependency>
         </dependencies>
       </plugin>
